--- a/PushySquares/Base.lproj/Main.storyboard
+++ b/PushySquares/Base.lproj/Main.storyboard
@@ -1,13 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="278-mJ-tbC">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Main Menu Controller-->
+        <scene sceneID="Xdm-pU-Tts">
+            <objects>
+                <viewController id="278-mJ-tbC" customClass="MainMenuController" customModule="PushySquares" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ntf-T6-841"/>
+                        <viewControllerLayoutGuide type="bottom" id="ms8-Wl-9uC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WBX-xa-Q1n">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="c1A-2L-cTK">
+                                <rect key="frame" x="0.0" y="28" width="320" height="284"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.95527199009999997" blue="0.83132437039999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="c1A-2L-cTK" firstAttribute="leading" secondItem="WBX-xa-Q1n" secondAttribute="leading" id="DrB-V4-uFP"/>
+                            <constraint firstItem="c1A-2L-cTK" firstAttribute="top" secondItem="ntf-T6-841" secondAttribute="bottom" constant="8" id="sUX-j6-PMe"/>
+                            <constraint firstItem="c1A-2L-cTK" firstAttribute="height" secondItem="WBX-xa-Q1n" secondAttribute="height" multiplier="0.5" id="sdf-wy-zI1"/>
+                            <constraint firstAttribute="trailing" secondItem="c1A-2L-cTK" secondAttribute="trailing" id="zW8-RK-4SE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="logo" destination="c1A-2L-cTK" id="Fbb-X7-9uY"/>
+                        <segue destination="JHb-83-4Au" kind="show" identifier="showPlayerCountSelector" id="0WG-44-JaC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iiB-IW-G4u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="FzR-l3-ef1" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-1278.75" y="134.1549295774648"/>
+        </scene>
+        <!--Player Count Selector Controller-->
+        <scene sceneID="GAr-Tw-diI">
+            <objects>
+                <viewController id="JHb-83-4Au" customClass="PlayerCountSelectorController" customModule="PushySquares" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cdO-yu-rHt"/>
+                        <viewControllerLayoutGuide type="bottom" id="scO-nY-5Mz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vFH-cn-e9u">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Km-MB-A6e">
+                                <rect key="frame" x="35" y="28" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="foo" destination="JHb-83-4Au" eventType="touchUpInside" id="vze-uu-Czk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="showGame" id="X4E-x1-Fnn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UAY-Ra-WT2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-538" y="133"/>
+        </scene>
         <!--Game View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -20,20 +86,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YVe-dP-7XA" customClass="GameBoardView" customModule="PushySquares" customModuleProvider="target">
-                                <rect key="frame" x="40" y="133" width="240" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i9h-4K-ghH" customClass="StatusBar" customModule="PushySquares" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i9h-4K-ghH" customClass="StatusBar" customModule="PushySquares" customModuleProvider="target">
                                 <rect key="frame" x="40" y="28" width="252" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mc3-cj-MLr" customClass="ActionBar" customModule="PushySquares" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mc3-cj-MLr" customClass="ActionBar" customModule="PushySquares" customModuleProvider="target">
                                 <rect key="frame" x="74" y="391" width="173" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YVe-dP-7XA" customClass="GameBoardView" customModule="PushySquares" customModuleProvider="target">
+                                <rect key="frame" x="40" y="143" width="240" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.95527199009802899" blue="0.83132437035253803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -41,11 +107,15 @@
                     <connections>
                         <outlet property="boardView" destination="YVe-dP-7XA" id="Xam-e1-DuC"/>
                         <outlet property="statusBar" destination="i9h-4K-ghH" id="shE-9d-Yvv"/>
+                        <segue destination="FzR-l3-ef1" kind="unwind" identifier="quitGame" unwindAction="unwindFromGameWithSegue:" id="hX1-d4-dmj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.875" y="135.21126760563379"/>
+            <point key="canvasLocation" x="195" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="862" height="364"/>
+    </resources>
 </document>
